Remove some of the version requirements

--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,24 @@
 name: cats_python
 dependencies:
-- cycler=0.10.0=py27_0
-- jpeg=8d=vc9_0
-- libpng=1.6.17=vc9_1
-- libtiff=4.0.6=vc9_1
-- matplotlib=1.5.1=np111py27_0
+- cycler=0.10.0
+- jpeg=8d
+- libpng=1.6.17
+- libtiff=4.0.6
+- matplotlib=1.5.1
 - mkl=11.3.1=0
-- numpy=1.11.0=py27_0
-- openssl=1.0.2g=vc9_0
-- pandas=0.19.2=np111py27_1
-- pip=8.1.1=py27_1
-- pyparsing=2.1.1=py27_0
-- pyqt=4.11.4=py27_5
-- python=2.7.11=4
-- python-dateutil=2.5.2=py27_0
-- pytz=2016.3=py27_0
-- qt=4.8.7=vc9_7
-- scipy=0.17.0=np111py27_1
-- setuptools=20.7.0=py27_0
-- sip=4.16.9=py27_2
-- six=1.10.0=py27_0
-- tk=8.5.18=vc9_0
-- vs2008_runtime=9.00.30729.1=0
-- vs2010_runtime=10.00.40219.1=0
-- wheel=0.29.0=py27_0
-- zlib=1.2.8=vc9_2
-prefix: C:\Users\d5o\AppData\Local\Continuum\Anaconda3\envs\cats_python
-
+- numpy=1.11.0
+- openssl=1.0.2g
+- pandas=0.19.2
+- pip=8.1.1
+- pyparsing=2.1.1
+- pyqt=4.11.4
+- python=2.7
+- python-dateutil=2.5.2
+- pytz=2016.3
+- qt=4.8.7
+- scipy=0.17.0
+- setuptools=20.7.0
+- sip=4.16.9
+- six=1.10.0
+- wheel=0.29.0
+- zlib=1.2.8
