Remove unused packages

--- a/environment.yml
+++ b/environment.yml
@@ -1,24 +1,14 @@
 name: cats_python
 dependencies:
-- cycler=0.10.0
-- jpeg=8d
-- libpng=1.6.17
-- libtiff=4.0.6
-- matplotlib=1.5.1
-- mkl=11.3.1=0
-- numpy=1.11.0
-- openssl=1.0.2g
+- libpng
+- matplotlib=1.5
+- numpy
 - pandas=0.19.2
-- pip=8.1.1
-- pyparsing=2.1.1
-- pyqt=4.11.4
+- pyqt=4.11
 - python=2.7
-- python-dateutil=2.5.2
-- pytz=2016.3
-- qt=4.8.7
-- scipy=0.17.0
-- setuptools=20.7.0
-- sip=4.16.9
-- six=1.10.0
-- wheel=0.29.0
-- zlib=1.2.8
+- python-dateutil
+- qt=4.8
+- scipy
+- setuptools
+- sip
+- six
